--- a/pmaven-cli/pom.xml
+++ b/pmaven-cli/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>pmaven-scala</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.sonatype.pmaven</groupId>
+            <artifactId>pmaven-jruby</artifactId>
+        </dependency>
+
         <!-- Used for XML Canonicalization, to compare
              pom.xml files -->
         <dependency>
