--- a/pom.yml
+++ b/pom.yml
@@ -1,6 +1,10 @@
 artifactId: pmaven
 build:
   defaultGoal: install
+  pluginManagement:
+    plugins:
+    - {artifactId: maven-site-plugin, extensions: false, groupId: org.apache.maven.plugins,
+      inherited: true, version: '2.1'}
   plugins:
   - artifactId: maven-surefire-plugin
     configuration:
@@ -14,7 +18,7 @@ build:
     extensions: false
     groupId: org.apache.maven.plugins
     inherited: true
-    version: 2.4.3
+    version: '2.5'
   - artifactId: maven-compiler-plugin
     configuration: {source: '1.5', target: '1.5'}
     extensions: false
@@ -51,6 +55,7 @@ build:
     version: 2.0-beta-9
   - {artifactId: maven-scm-plugin, extensions: false, groupId: org.apache.maven.plugins,
     inherited: true, version: '1.2'}
+ciManagement: {system: Hudson, url: 'https://grid.sonatype.org/ci/job/Polyglot-Maven'}
 dependencies:
 - {artifactId: junit, groupId: junit, optional: false, scope: test, type: jar, version: '4.7'}
 - {artifactId: groovy, groupId: org.codehaus.groovy, optional: false, scope: test,
@@ -75,39 +80,63 @@ dependencyManagement:
     optional: false
     type: jar
     version: 1.7.0
-  - {artifactId: gossip, groupId: org.sonatype.gossip, optional: false, type: jar,
-    version: '1.2'}
   - {artifactId: guice, groupId: com.google.inject, optional: false, type: jar, version: '2.0'}
-  - {artifactId: grrrowl, groupId: org.sonatype.grrrowl, optional: false, type: jar,
-    version: '1.0'}
-  - {artifactId: jna, groupId: net.java.dev.jna, optional: false, type: jar, version: 3.2.3}
+  - {artifactId: mvnsh-maven, groupId: org.sonatype.maven.shell, optional: false,
+    type: jar, version: '0.10'}
+  - {artifactId: gshell-core, classifier: tests, groupId: org.sonatype.gshell, optional: false,
+    type: jar, version: '2.5'}
   - {artifactId: pmaven-common, groupId: org.sonatype.pmaven, optional: false, type: jar,
-    version: 0.7-SNAPSHOT}
+    version: 0.8-SNAPSHOT}
   - {artifactId: pmaven-cli, groupId: org.sonatype.pmaven, optional: false, type: jar,
-    version: 0.7-SNAPSHOT}
+    version: 0.8-SNAPSHOT}
   - {artifactId: pmaven-maven-plugin, groupId: org.sonatype.pmaven, optional: false,
-    type: jar, version: 0.7-SNAPSHOT}
+    type: jar, version: 0.8-SNAPSHOT}
   - {artifactId: pmaven-groovy, groupId: org.sonatype.pmaven, optional: false, type: jar,
-    version: 0.7-SNAPSHOT}
+    version: 0.8-SNAPSHOT}
   - {artifactId: pmaven-yaml, groupId: org.sonatype.pmaven, optional: false, type: jar,
-    version: 0.7-SNAPSHOT}
+    version: 0.8-SNAPSHOT}
+  - {artifactId: pmaven-jruby, groupId: org.sonatype.pmaven, optional: false, type: jar,
+    version: 0.8-SNAPSHOT}
+  - {artifactId: pmaven-commands, groupId: org.sonatype.pmaven, optional: false, type: jar,
+    version: 0.8-SNAPSHOT}
   - {artifactId: pmaven-clojure, groupId: org.sonatype.pmaven, optional: false, type: jar,
-    version: 0.7-SNAPSHOT}
+    version: 0.8-SNAPSHOT}
   - {artifactId: pmaven-scala, groupId: org.sonatype.pmaven, optional: false, type: jar,
-    version: 0.7-SNAPSHOT}
+    version: 0.8-SNAPSHOT}
+developers:
+- email: jason@planet57.com
+  id: jdillon
+  name: Jason Dillon
+  roles: [Build Master, Developer]
+distributionManagement:
+  site: {id: '${forgeSiteId}', url: '${forgeSiteUrl}'}
 groupId: org.sonatype.pmaven
 issueManagement: {system: JIRA, url: 'https://issues.sonatype.org/browse/PMAVEN'}
 licenses:
 - {distribution: repo, name: 'The Apache Software License, Version 2.0', url: 'http://www.apache.org/licenses/LICENSE-2.0.txt'}
+mailingLists:
+- {name: Development, post: polyglot@maven.org, subscribe: polyglot-subscribe@maven.org}
 modelVersion: 4.0.0
 modules: [pmaven-common, pmaven-maven-plugin, pmaven-groovy, pmaven-yaml, pmaven-clojure,
-  pmaven-scala, pmaven-cli]
+  pmaven-jruby, pmaven-scala, pmaven-cli, pmaven-commands]
 name: Polyglot Maven
 packaging: pom
 parent: {artifactId: forge-parent, groupId: org.sonatype.forge, relativePath: ../pom.xml,
   version: '5'}
-properties: {mavenVersion: 3.0-alpha-6, project.build.sourceEncoding: UTF-8}
+properties: {forgeSiteId: forge-sites, mavenVersion: 3.0-alpha-7, project.build.sourceEncoding: UTF-8,
+  forgeSiteUrl: 'dav:http://repository.sonatype.org/content/sites/forge-sites/${project.artifactId}/${project.version}'}
+reporting:
+  excludeDefaults: false
+  plugins:
+  - artifactId: maven-javadoc-plugin
+    configuration:
+      configuration: {source: '1.5', encoding: '${project.build.sourceEncoding}'}
+    groupId: org.apache.maven.plugins
+    inherited: true
+    version: 2.6.1
+  - {artifactId: cobertura-maven-plugin, groupId: org.codehaus.mojo, inherited: false,
+    version: '2.3'}
 scm: {connection: 'scm:git:git://github.com/sonatype/polyglot-maven.git', developerConnection: 'scm:git:ssh://git@github.com/sonatype/polyglot-maven.git',
-  tag: HEAD, url: 'https://github.com/sonatype/polyglot-maven'}
-url: https://docs.sonatype.org/display/PMAVEN
-version: 0.7-SNAPSHOT
+  tag: HEAD, url: 'http://github.com/sonatype/polyglot-maven'}
+url: http://polyglot.sonatype.org/
+version: 0.8-SNAPSHOT
